Added basic input fields for first name, last nama, id number, job title, annual salary

--- a/index.html
+++ b/index.html
@@ -10,5 +10,34 @@
   </head>
   <body>
     <h1>Monthly Employee Salary Calculator</h1>
+    <h2>
+      <form>
+        Add Employee
+
+        <label>
+          <input type="text" placeholder="First name" id="firstName" />
+        </label>
+
+        <label>
+          <input type="text" placeholder="Last name" id="lastName" />
+        </label>
+
+        <label>
+          <input
+            type="number"
+            placeholder="Employee ID Number"
+            id="employeeID"
+          />
+        </label>
+
+        <label>
+          <input type="text" placeholder="Job title" id="jobTitle" />
+        </label>
+
+        <label>
+          <input type="number" placeholder="Annual salary" id="annualSalary" />
+        </label>
+      </form>
+    </h2>
   </body>
 </html>
