Added basic submit button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <label>
           <input type="number" placeholder="Annual salary" id="annualSalary" />
         </label>
+
+        <input type="submit" value="Submit" id="submitBtn" />
       </form>
     </h2>
   </body>
