updated renderEmployeeData function to add employee data to list and DOM

--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
 
         <input type="submit" value="Submit" id="submitBtn" />
       </form>
+
+      <table>
+        <thead>
+          <tr>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Employee ID number</th>
+            <th>Job title</th>
+            <th>Annual salary</th>
+          </tr>
+        </thead>
+        <tbody id="employeeDataTable"></tbody>
+      </table>
     </h2>
   </body>
 </html>
