implement form reset on submit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Monthly Employee Salary Calculator</h1>
     <h2>
-      <form>
+      <form id="employeeInputs">
         Add Employee
 
         <label>
