--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </thead>
         <tbody id="employeeDataTable"></tbody>
       </table>
+      <div id="salarySum">Total Monthly:</div>
     </h2>
   </body>
 </html>
