made background red

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </thead>
         <tbody id="employeeDataTable"></tbody>
       </table>
-      <div id="salarySum">Total Monthly: $</div>
+      <label for="salarySum">Total Monthly:</label>
+      <div id="salarySum"></div>
     </h2>
   </body>
 </html>
