added delete button and made it work

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <table>
         <thead>
-          <tr>
+          <tr class="row">
             <th>First name</th>
             <th>Last name</th>
             <th>Employee ID number</th>
