adding some styling to the labels and buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Monthly Employee Salary Calculator</h1>
     <h2>
       <form id="employeeInputs">
-        Add Employee
+        <label>Add Employee </label>
 
         <label>
           <input type="text" placeholder="First name" id="firstName" />
@@ -38,7 +38,9 @@
           <input type="number" placeholder="Annual salary" id="annualSalary" />
         </label>
 
-        <input type="submit" value="Submit" id="submitBtn" />
+        <label>
+          <input type="submit" value="Submit" id="submitBtn" />
+        </label>
       </form>
 
       <table>
