adding styling to buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="scripts/app.js"></script>
   </head>
   <body>
-    <h1>Monthly Employee Salary Calculator</h1>
+    <h1>Salary Calculator</h1>
     <h2>
       <form id="employeeInputs">
         <label>Add Employee </label>
@@ -50,7 +50,7 @@
             <th>Last name</th>
             <th>Employee ID number</th>
             <th>Job title</th>
-            <th>Annual salary</th>
+            <th id="annualSalary">Annual salary</th>
           </tr>
         </thead>
         <tbody id="employeeDataTable"></tbody>
