adding additonal styling

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
           </tr>
         </thead>
         <tbody id="employeeDataTable"></tbody>
+        <tfoot>
+          <label for="salarySum">Total Monthly:</label>
+          <div id="salarySum"></div>
+        </tfoot>
       </table>
-      <label for="salarySum">Total Monthly:</label>
-      <div id="salarySum"></div>
     </h2>
   </body>
 </html>
