--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
       <table>
         <thead>
+          <tr>
+            <th>
+              <label for="salarySum">Total Monthly:</label>
+              <div id="salarySum"></div>
+            </th>
+          </tr>
           <tr class="row">
             <th>First name</th>
             <th>Last name</th>
@@ -54,10 +60,7 @@
           </tr>
         </thead>
         <tbody id="employeeDataTable"></tbody>
-        <tfoot>
-          <label for="salarySum">Total Monthly:</label>
-          <div id="salarySum"></div>
-        </tfoot>
+        <tfoot></tfoot>
       </table>
     </h2>
   </body>
